# faxmon-rust-sdk

./: .windsurfrules  Cargo.toml  README.md  TODO.md
docs/: SDK.md
examples/: send_update.rs
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
src/: client.rs  error.rs  lib.rs  models.rs
